деактивация ссылок пользователем
